--- a/bin/resources.cfg
+++ b/bin/resources.cfg
@@ -10,7 +10,7 @@ FileSystem=../media/thumbnails
 [Popular]
 FileSystem=../media
 FileSystem=../media/fonts
-cURL=http://localhost:8080/
+cURL=http://localhost/
 
 [General]
 FileSystem=../media
